<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MenuFragment">

    <ImageView
        android:id="@+id/image_books"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_margin="@dimen/layout_margin"
        android:src="@drawable/books"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/book_title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/books"
        android:textColor="@color/violet"
        android:textSize="@dimen/menu_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image_books"
        app:layout_constraintStart_toStartOf="@id/image_books"
        app:layout_constraintTop_toBottomOf="@id/image_books" />

    <ImageView
        android:id="@+id/image_special"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:src="@drawable/special"
        app:layout_constraintStart_toEndOf="@id/image_books"
        app:layout_constraintTop_toTopOf="@id/image_books"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/special_title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/special"
        android:textColor="@color/violet"
        android:textSize="@dimen/menu_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image_special"
        app:layout_constraintStart_toStartOf="@id/image_special"
        app:layout_constraintTop_toBottomOf="@id/image_special" />

    <ImageView
        android:id="@+id/image_courses"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_marginTop="80dp"
        android:src="@drawable/courses"
        app:layout_constraintStart_toStartOf="@id/image_books"
        app:layout_constraintTop_toBottomOf="@id/image_books" />

    <TextView
        android:id="@+id/courses_title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/courses"
        android:textColor="@color/violet"
        android:textSize="@dimen/menu_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image_courses"
        app:layout_constraintStart_toStartOf="@id/image_courses"
        app:layout_constraintTop_toBottomOf="@id/image_courses" />

    <ImageView
        android:id="@+id/image_acticles"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:src="@drawable/articles"
        app:layout_constraintStart_toEndOf="@id/image_courses"
        app:layout_constraintTop_toTopOf="@id/image_courses"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/articles_title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/articles"
        android:textColor="@color/violet"
        android:textSize="@dimen/menu_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image_acticles"
        app:layout_constraintStart_toStartOf="@id/image_acticles"
        app:layout_constraintTop_toBottomOf="@id/image_acticles" />

    <ImageView
        android:id="@+id/image_glider"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_marginTop="80dp"
        android:src="@drawable/glider"
        app:layout_constraintStart_toStartOf="@id/image_courses"
        app:layout_constraintTop_toBottomOf="@id/image_courses" />

    <TextView
        android:id="@+id/glider_title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/glider"
        android:textColor="@color/violet"
        android:textSize="@dimen/menu_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image_glider"
        app:layout_constraintStart_toStartOf="@id/image_glider"
        app:layout_constraintTop_toBottomOf="@id/image_glider" />

    <ImageView
        android:id="@+id/image_settings"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:src="@drawable/settings"
        app:layout_constraintStart_toEndOf="@id/image_glider"
        app:layout_constraintTop_toTopOf="@id/image_glider"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/settings_title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        android:textColor="@color/violet"
        android:textSize="@dimen/menu_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image_settings"
        app:layout_constraintStart_toStartOf="@id/image_settings"
        app:layout_constraintTop_toBottomOf="@id/image_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>